Fix visible password on login page

--- a/static/css/login.css
+++ b/static/css/login.css
@@ -19,7 +19,7 @@ img#logo{
 
 }
 
-input[type="text"]{
+input[type="text"], input[type="password"]{
     height: 1em;
     width: 12em;
     padding: 8px;
